--- a/build.gradle
+++ b/build.gradle
@@ -110,15 +110,15 @@ javadoc {
 }
 
 test {
-    useJUnitPlatform()
-/*
-  useJUnitPlatform {
-    includeTags 'fast', 'smoke & feature-a'
-    //excludeTags 'slow', 'ci'
-    includeEngines 'junit-jupiter'
-    //excludeEngines 'junit-vintage'
-  }
-*/
+    /* 
+     useJUnitPlatform()
+     useJUnitPlatform {
+         includeTags 'fast', 'smoke & feature-a'
+         //excludeTags 'slow', 'ci'
+         //includeEngines 'junit-jupiter'
+         //excludeEngines 'junit-vintage'
+   }
+   */
 }
 
 //project.ext.short_version = '1.0.0'
@@ -293,7 +293,7 @@ dependencies {
     testCompile('org.mockito:mockito-junit-jupiter:2.+') {
         exclude group: 'org.junit.jupiter', module: 'junit-jupiter-engine'
     }
-    annotationProcessor group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.0'
+    //annotationProcessor group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.0'
 }
 
 processResources {
