The 1.8.9 build is ready.

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,15 +6,15 @@ name=Japanese Emoji Commands
 description=A simple mod that let's you use Kaomoji (Japanese emoji) in Minecraft.
 
 #Minumum Minecraft Version Mod will be built with
-mc_version=1.9.4
+mc_version=1.8.9
 #ForgeGradle version to use (Required)
-fg_version=2.2-SNAPSHOT
+fg_version=2.1-SNAPSHOT
 #version of Minecraft Forge is built against (Required)
-forge_mc_version=1.9.4
+forge_mc_version=1.8.9
 #Forge version to use (Required)
-forge_version=12.17.0.2051
+forge_version=11.15.1.2318-1.8.9
 #Mappings version to use (Required)
-mcp_mappings=stable_24
+mcp_mappings=stable_22
 
 #Cursforge Project ID (Required)
 cf_project_id=277068
