Few missing things and updates.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 org.gradle.daemon=false
+org.gradle.jvmargs=-Xmx3G
 
 group=com.mcmoddev
 archivesBaseName=japanese-emoji-commands
@@ -12,7 +13,7 @@ fg_version=2.3-SNAPSHOT
 #version of Minecraft Forge is built against (Required)
 forge_mc_version=1.12.2
 #Forge version to use (Required)
-forge_version=14.23.5.2824
+forge_version=14.23.5.2836
 #Mappings version to use (Required)
 mcp_mappings=stable_39
 
