Commented out curse project ID

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,7 @@ forge_version=13.20.1.2588
 mcp_mappings=stable_32
 
 #Cursforge Project ID (Required)
-cf_project_id=277068
+#cf_project_id=277068
 #Type of Release, can be one of 'alpha', 'beta' or 'release' (Defaults to 'alpha' if not set)
 cf_release_type=release
 #When using a ChangeLog file specifies filename
