Fixed gradle issues and got a changelog ready.

--- a/gradle.properties
+++ b/gradle.properties
@@ -28,7 +28,7 @@ cf_changelog_type=markdown
 #Version(s) of Minecraft this mod will work on (comma separated list)
 cf_versions=1.8.9
 #Whether to use a custom display name on artifacts
-cf_use_custom_display_name=true
+#cf_use_custom_display_name=false
 #List of required dependencies (comma separated list)
 #cf_requirements =
 #List of optional dependencies (comma separated list)
