Renamed the branch and updated the readme.

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,7 @@ forge_version=11.15.1.2318-1.8.9
 mcp_mappings=stable_22
 
 #Cursforge Project ID (Required)
-#cf_project_id=277068
+cf_project_id=277068
 #Type of Release, can be one of 'alpha', 'beta' or 'release' (Defaults to 'alpha' if not set)
 cf_release_type=release
 #When using a ChangeLog file specifies filename
