--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,21 +1,31 @@
-modLoader="javafml" #mandatory
-loaderVersion="[32,)" #mandatory
-issueTrackerURL="http://my.issue.tracker/" #optional
-license="ARR"
+modLoader="javafml"
+loaderVersion="[34,)"
+license="LGPL-v2.1"
+updateJSONURL="https://tophat.cat/japanese-emoji-commands/update.json"
+issueTrackerURL="https://github.com/tophatcats-mods/japanese-emoji-commands/issues"
+displayURL="https://www.curseforge.com/minecraft/mc-mods/japanese-emoji-commands"
+#logoFile=""
+credits="ProxyNeko"
+authors="ProxyNeko"
 
 [[mods]]
-	modId="japaneseemojicommands"
-	version="${version}"
-	displayName="Japanese Emoji Commands"
-	updateJSONURL="https://www.curseforge.com/minecraft/mc-mods/japanese-emoji-commands"
-	displayURL="https://tophat.cat"
-	#logoFile="examplemod.png" #optional
-	credits="ProxyNeko"
-	authors=["ProxyNeko"]
-	description='''A simple mod that let's you use Kaomoji (Japanese emoji) in Minecraft.'''
+modId="japanese-emoji-commands"
+version="${file.jarVersion}"
+displayName="Japanese Emoji Commands"
+description='''
+A simple mod that let's you use Kaomoji (Japanese emoji) in Minecraft.
+'''
 
-dependencies.projectbrazier = [
-    {modid="forge", mandatory=true, versionRange="[32,)", ordering="NONE",side="BOTH"}
-]
+[[dependencies.japanese-emoji-commands]]
+modId="forge"
+mandatory=true
+versionRange="[36,)"
+ordering="NONE"
+side="BOTH"
 
-
+[[dependencies.japanese-emoji-commands]]
+modId="minecraft"
+mandatory=true
+versionRange="[1.16.5]"
+ordering="NONE"
+side="BOTH"
