--- a/gradle.properties
+++ b/gradle.properties
@@ -20,10 +20,6 @@ vendor = tophatcat
 mc_version = 1.16.5
 # The Forge version we want to build against.
 forge_version = 36.0.13
-# The ForgeGradle version you should use.
-forgegradle_version = 3.+
-# The version of MixinGradle you want to use.
-mixingradle_version = 0.7-SNAPSHOT
 # Mapping channel, stable or snapshot.
 mappings_channel = snapshot
 # Mapping version or snapshot version.
@@ -123,5 +119,5 @@ create_sources_jar = true
 
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs = -Xmx3G
+org.gradle.jvmargs = -Xmx3G -XX:+ParallelRefProcEnabled
 org.gradle.daemon = false
