--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 
 version = '1.16.5-1.3.0'
 group = 'cat.tophat.japaneseemojicommands'
-archivesBaseName = 'japanese-emoji-commands'
+archivesBaseName = 'japaneseemojicommands'
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(8)
 
@@ -67,7 +67,7 @@ repositories {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.16.5-36.0.13'
+    minecraft 'net.minecraftforge:forge:1.16.5-36.2.35'
 }
 
 jar {
