--- a/build.gradle
+++ b/build.gradle
@@ -2,18 +2,17 @@ plugins {
     id 'eclipse'
     id 'maven-publish'
     id 'net.minecraftforge.gradle' version '5.1.+'
-//    id 'org.spongepowered.mixin' version '0.7-SNAPSHOT'
 }
 
-version = '1.16.5-1.3.0'
+version = '1.19.x-1.5.0'
 group = 'cat.tophat.japaneseemojicommands'
-archivesBaseName = 'japaneseemojicommands'
+archivesBaseName = 'JapaneseEmojiCommands'
 
-java.toolchain.languageVersion = JavaLanguageVersion.of(8)
+java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
 minecraft {
-    mappings channel: 'snapshot', version: '20200916-1.16.2'
+    mappings channel: 'official', version: '1.19'
 
     runs {
         client {
@@ -30,19 +29,6 @@ minecraft {
         server {
             workingDirectory project.file('run')
             property 'forge.logging.console.level', 'debug'
-
-            mods {
-                japaneseemojicommands {
-                    source sourceSets.main
-                }
-            }
-        }
-
-        data {
-            workingDirectory project.file('run')
-            property 'forge.logging.console.level', 'debug'
-
-            args '--mod', 'japanese-emoji-commands', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
 
             mods {
                 japaneseemojicommands {
@@ -67,18 +53,18 @@ repositories {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.16.5-36.2.35'
+    minecraft 'net.minecraftforge:forge:1.19-41.0.35'
 }
 
 jar {
     manifest {
         attributes([
                 "Specification-Title"     : project.name,
-                "Specification-Vendor"    : "${project.mod_author}",
+                "Specification-Vendor"    : 'ProxyNeko',
                 "Specification-Version"   : "1", // We are version 1 of ourselves
                 "Implementation-Title"    : project.name,
                 "Implementation-Version"  : project.jar.archiveVersion,
-                "Implementation-Vendor"   : "${project.mod_author}",
+                "Implementation-Vendor"   : 'ProxyNeko',
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
