--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@ out
 *.ipr
 *.iws
 *.iml
-.idea
+.idea/*
+!.idea/scopes
 
 # gradle
 build
@@ -19,9 +20,8 @@ build
 
 # other
 eclipse
-run/*
-logs/*
-extras/*
-
-# Files from Forge MDK
-forge*changelog.txt
+run
+extras
+libs
+screenshots
+mcmodsrepo
