--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,36 @@
+# Project related properties.
+mod_version=2.0.0
+mod_name=Japanese-Emoji-Commands
+mod_id=japaneseemojicommands
+mod_group=dev.tophatcat.japaneseemojicommands
+mod_credits=KiriCattus
+mod_author=KiriCattus
+mod_homepage=https://curseforge.com/minecraft/mc-mods/japanese-emoji-commands
+mod_source=https://github.com/tophatcats-mods/japanese-emoji-commands
+mod_issue_tracker=https://github.com/tophatcats-mods/japanese-emoji-commands/issues
+mod_update_url=https://tophatcat.dev/mods/updates/japanese-emoji-commands.json
+mod_changelog_url=https://tophatcat.dev/mods/changelogs/japanese-emoji-commands.txt
+mod_description=A simple mod that let's use Kaomoji (Japanese emoji) in Minecraft.
+mod_license=LGPL v2.1
+mod_twitter=https://twitter.com/KiriCattus
+mod_discord=https://discord.tophatcat.dev
+
+# Minecraft and Forge related properties.
+minecraft_version=1.19
+forge_version=41.0.45
+#Enable or disable access transformers.
+forge_ats_enabled=false
+
+
+# CurseForge properties.
+curseforge_project_id=277068
+#Can accept "alpha", "beta" or "release".
+curseforge_release_type=release
+#The Modloader we are using, can accept "Forge", "Fabric", "Rift" or "Quilt".
+curseforge_mod_loader=Forge
+curseforge_java_version=Java 17
+
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs = -Xmx3G -XX:+ParallelRefProcEnabled
-org.gradle.daemon = false
+org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
