--- a/settings.gradle
+++ b/settings.gradle
@@ -1,20 +1,12 @@
 pluginManagement {
     repositories {
         gradlePluginPortal()
+        maven {
+            name = 'Minecraft Forge Maven'
+            url = 'https://maven.minecraftforge.net/'
+        }
+
         mavenCentral()
-        maven {
-            name = "MinecraftForge"
-            url = "https://maven.minecraftforge.net"
-        }
-        maven {
-            name = "SpongePowered"
-            url = "https://repo.spongepowered.org/repository/maven-public/"
-        }
-    }
-    resolutionStrategy {
-        eachPlugin {
-            if (requested.id.id == 'org.spongepowered.mixin')
-                useModule("org.spongepowered:mixingradle:${requested.version}")
-        }
+        gradlePluginPortal()
     }
 }
