Remove broken eager buildscript tasks
Unable to run any Gradle command otherwise.

--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,5 @@
 import java.time.OffsetDateTime
 import java.time.ZoneOffset
-import com.diluv.schoomp.Webhook
-import com.diluv.schoomp.message.Message
-import com.diluv.schoomp.message.embed.Embed
-import net.darkhax.curseforgegradle.TaskPublishCurseForge
 
 buildscript {
     repositories {
@@ -199,13 +195,10 @@ jar {
         preserveFileTimestamps = false
         reproducibleFileOrder = true
     }
+
+    finalizedBy('reobfJar')
 }
 
-// Example configuration to allow publishing using the maven-publish plugin
-// This is the preferred method to reobfuscate your jar file
-jar.finalizedBy('reobfJar')
-// However if you are in a multi-project build, dev time needs unobfed jar files, so you can delay the obfuscation until publishing by doing
-// publish.dependsOn('reobfJar')
 
 publishing {
     publications {
@@ -239,49 +232,5 @@ license {
         name = mod_name
         source = mod_source
         author = mod_author
-    }
-}
-
-task publishToCurseForge(type: TaskPublishCurseForge) {
-    apiToken = curseforge_api_token ?: "invalid/no CurseForge API token found!"
-
-    def mainFile = upload(curseforge_project_id, file("${project.buildDir}/libs/${archivesBaseName}-${version}.jar"))
-
-    mainFile.displayName = "${archivesBaseName}-${version}"
-    mainFile.releaseType = curseforge_release_type
-    mainFile.addModLoader(curseforge_mod_loader)
-    mainFile.addGameVersion(minecraft_version)
-    mainFile.addJavaVersion(curseforge_java_version)
-
-    //mainFile.addRequirement('fabric-api') //Fabric API slug
-    //mainFile.addEmbedded('cloth-config') //Cloth Config slug
-    mainFile.changelog = mod_changelog_url
-}
-
-tasks.publishToCurseForge.dependsOn(tasks.assemble)
-
-if (discord_webhook) {
-    tasks.publish.dependsOn(tasks.publishToCurseForge)
-}
-
-tasks.getByName("publishToCurseForge").doLast {
-    try {
-        def webhook = new Webhook(discord_webhook, "${mod_name} Gradle Upload");
-
-        def message = new Message();
-        message.setUsername("Mod Update: ${mod_name}");
-        message.setContent("${mod_name} ${mod_version} for Minecraft version ${minecraft_version} has been uploaded pending review!");
-
-        def embed = new Embed();
-        embed.addField('Download:', "${mod_homepage}/files/", false);
-        embed.addField('Change Log:', mod_changelog_url, false);
-        embed.setColor(0xFF8000);
-        message.addEmbed(embed);
-
-        webhook.sendMessage(message);
-    }
-
-    catch (IOException e) {
-        println 'Failed to push to the Discord webhook.'
     }
 }
