Fix remaining build errors and port to 1.19.2

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,6 @@ mod_version=2.0.1
 mod_name=Japanese-Emoji-Commands
 mod_id=japaneseemojicommands
 mod_group=dev.tophatcat.japaneseemojicommands
-mod_credits=KiriCattus
-mod_author=KiriCattus
 mod_homepage=https://curseforge.com/minecraft/mc-mods/japanese-emoji-commands
 mod_source=https://github.com/tophatcats-mods/japanese-emoji-commands
 mod_issue_tracker=https://github.com/tophatcats-mods/japanese-emoji-commands/issues
@@ -16,8 +14,8 @@ mod_twitter=https://twitter.com/KiriCattus
 mod_discord=https://discord.tophatcat.dev
 
 # Minecraft and Forge related properties.
-minecraft_version=1.19
-forge_version=41.0.63
+minecraft_version=1.19.2
+forge_version=43.2.0
 #Enable or disable access transformers.
 forge_ats_enabled=false
 
@@ -32,5 +30,5 @@ curseforge_java_version=Java 17
 
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx3G
+org.gradle.jvmargs=-Xmx2G -XX:+ParallelRefProcEnabled
 org.gradle.daemon=false
