Apply requested transfer changes, mods.groovy, MIT
- Apply the changes requested by KiriCattus (update links and change package names)
- Change license to MIT, following permission from KiriCattus
- Drastically simplify the buildscript
- Stop embedding license headers in every code source file
- Use mods.groovy

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,12 +1,14 @@
 pluginManagement {
     repositories {
         gradlePluginPortal()
+        mavenCentral()
         maven {
-            name = 'Minecraft Forge Maven'
+            name = 'MinecraftForge'
             url = 'https://maven.minecraftforge.net/'
         }
-
-        mavenCentral()
-        gradlePluginPortal()
+        maven {
+            name = 'The Modding Inquisition'
+            url = 'https://maven.moddinginquisition.org/releases'
+        }
     }
 }
