--- a/build.gradle
+++ b/build.gradle
@@ -1,117 +1,47 @@
-import java.time.OffsetDateTime
-import java.time.ZoneOffset
-
 plugins {
     id 'eclipse'
     id 'net.minecraftforge.gradle' version '5.1.+'
-    id 'org.cadixdev.licenser' version '0.6.1'
+    id 'io.github.groovymc.modsdotgroovy' version '1.1.2'
 }
 
-version = "${mod_version}"
-group = "${mod_group}" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "${mod_name}-Forge-${minecraft_version}"
+version = "$mod_version"
+group = 'ga.ozli.minecraftmods.japaneseemojicommands'
+archivesBaseName = 'japaneseemojicommands'
 
-// Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
 minecraft {
-    // The mappings can be changed at any time and must be in the following format.
-    // Channel:   Version:
-    // official   MCVersion             Official field/method names from Mojang mapping files
-    // parchment  YYYY.MM.DD-MCVersion  Open community-sourced parameter names and javadocs layered on top of official
-    //
-    // You must be aware of the Mojang license when using the 'official' or 'parchment' mappings.
-    // See more information here: https://github.com/MinecraftForge/MCPConfig/blob/master/Mojang.md
-    //
-    // Parchment is an unofficial project maintained by ParchmentMC, separate from MinecraftForge
-    // Additional setup is needed to use their mappings: https://github.com/ParchmentMC/Parchment/wiki/Getting-Started
-    //
-    // Use non-default mappings at your own risk. They may not always work.
-    // Simply re-run your setup task after changing the mappings to update your workspace.
     mappings channel: 'official', version: minecraft_version
 
-    if (project.forge_ats_enabled) {
-        accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg') // Currently, this location cannot be changed from the default.
-        project.logger.debug("Forge Access Transformers are enabled for the project ${mod_name}.")
-    }
-
-    // Default run configurations.
-    // These can be tweaked, removed, or duplicated as needed.
     runs {
-        client {
+        // Shared between all run configs
+        configureEach {
             workingDirectory project.file('run')
 
-            // Recommended logging data for a userdev environment
-            // The markers can be added/remove as needed separated by commas.
-            // "SCAN": For mods scan.
-            // "REGISTRIES": For firing of registry events.
-            // "REGISTRYDUMP": For getting the contents of all registries.
-            property 'forge.logging.markers', 'REGISTRIES'
-
-            // Recommended logging level for the console
-            // You can set various levels here.
-            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
             property 'forge.logging.console.level', 'debug'
 
             // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
-            property 'forge.enabledGameTestNamespaces', mod_id
+            property 'forge.enabledGameTestNamespaces', 'japaneseemojicommands'
 
-            // These arguments allow for optional authentication with Mojang servers.
-            // If you want to authenticate, put these properties in GRADLE_HOME/gradle.properties.
-            // By default, this is C:\Users\<your username>\.gradle\gradle.properties on Windows or ~/.gradle/gradle.properties on Linux/MacOS.
-            if (project.hasProperty('mc_uuid')) {
-                // Your UUID, trimmed / without the dashes
-                args '--uuid', project.getProperty('mc_uuid')
+            mods {
+                japaneseemojicommands {
+                    source sourceSets.main
+                }
             }
-
-            if (project.hasProperty('mc_username')) {
-                // Your Minecraft in-game username, not email
-                args '--username', project.getProperty('mc_username')
-            }
-
-            mods.create("${mod_id}").source(sourceSets.main)
         }
 
-        server {
-            workingDirectory project.file('run')
-
-            property 'forge.logging.markers', 'REGISTRIES'
-            property 'forge.logging.console.level', 'debug'
-
-            args '--singleplayer', "yes", '--nogui', "true"
-
-            //property 'forge.enabledGameTestNamespaces', mod_id
-
-            mods.create("${mod_id}").source(sourceSets.main)
-        }
+        client { args '--username', 'Dev##' }
+        server { args '--nogui', 'true' }
 
         // This run config launches GameTestServer and runs all registered gametests, then exits.
         // By default, the server will crash when no gametests are provided.
         // The gametest system is also enabled by default for other run configs under the /test command.
-        gameTestServer {
-            workingDirectory project.file('run')
-
-            property 'forge.logging.markers', 'REGISTRIES'
-            property 'forge.logging.console.level', 'debug'
-
-            args '--singleplayer', "yes", '--nogui', "true"
-
-            property 'forge.enabledGameTestNamespaces', mod_id
-
-            mods.create("${mod_id}").source(sourceSets.main)
-        }
+        gameTestServer { args '--nogui', 'true' }
 
         data {
-            workingDirectory project.file('run')
-
-            property 'forge.logging.markers', 'REGISTRIES'
-            property 'forge.logging.console.level', 'debug'
-
             // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
-            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
-
-            mods.create("${mod_id}").source(sourceSets.main)
+            args '--mod', 'japaneseemojicommands', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
         }
     }
 }
@@ -123,58 +53,28 @@ dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 }
 
-tasks.named('processResources', ProcessResources) {
-    final Map<String, ?> buildProps = new LinkedHashMap(project.properties)
-
-    // Replaces FML's magic file.jarVersion string with the correct version at build time.
-    buildProps.put('file', [jarVersion: mod_version])
-
-    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
-        expand buildProps
-    }
-}
-
 tasks.named('jar', Jar) {
-    from("LICENSE.txt") {
-        rename {
-            "LICENSE_${archiveBaseName.get()}"
-        }
+    manifest.attributes([
+            "Specification-Title"      : 'Japanese Emoji Commands',
+            "Specification-Vendor"     : 'Paint_Ninja',
+            "Specification-Version"    : "1", // We are version 1 of ourselves
+            "Implementation-Title"     : 'Japanese Emoji Commands',
+            "Implementation-Version"   : mod_version,
+            "Implementation-Vendor"    : 'Paint_Ninja',
+            "Implementation-Timestamp" : new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+    ])
 
-        manifest.attributes([
-                "Specification-Title"      : mod_name,
-                "Specification-Vendor"     : 'KiriCattus',
-                "Specification-Version"    : "1", // We are version 1 of ourselves
-                "Implementation-Title"     : mod_name,
-                "Implementation-Version"   : project.jar.archiveVersion,
-                "Implementation-Vendor"    : 'KiriCattus',
-                "Implementation-Timestamp" : new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-                "Built-On-Java"            : "${System.getProperty('java.vm.version')} (${System.getProperty('java.vm.vendor')})",
-                "Build-On-Minecraft"       : minecraft_version
-        ])
-        includeEmptyDirs false
-        preserveFileTimestamps = false
-        reproducibleFileOrder = true
-    }
+    includeEmptyDirs = false
+    reproducibleFileOrder = true
 
-    finalizedBy('reobfJar')
+    finalizedBy 'reobfJar'
 }
 
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
 }
 
-license {
-    ignoreFailures = false
-    header = project.file('LicenseHeader.txt')
-    include '**/*.java'
-    include '**/*.kt'
-    exclude '**/package-info.java'
-    exclude '**/module-info.java'
-    newLine = false
-    properties {
-        year = OffsetDateTime.now(ZoneOffset.UTC).withNano(0).getYear()
-        name = mod_name
-        source = mod_source
-        author = 'KiriCattus'
-    }
+modsDotGroovy {
+    dslVersion = '1.2.1'
+    platform 'forge'
 }
